fixed some width issues when collapsing navbar

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 940px;
 }
 
 .wrapper {
